# GodOfThunder-Port

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  VERSION.GOT  build.sh  run.conf  run.sh  run_native.sh  shell.conf  shell.sh
.github/workflows/: build.yml
docs/: formats.md
reference/src/_g1/: 1_back.c  1_boss1.c  1_boss21.c  1_boss22.c  1_define.h  1_dialog.c  1_file.c  1_grp.c  1_image.c  1_init.c  1_main.c  1_move.c  1_movpat.c  1_object.c  1_panel.c  1_proto.h  1_script.c  1_sound.c  Makefile
reference/src/_g2/: 2_back.c  2_boss.c  2_boss1.c  2_boss22.c  2_define.h  2_dialog.c  2_file.c  2_grp.c  2_image.c  2_init.c  2_main.c  2_move.c  2_movpat.c  2_object.c  2_panel.c  2_proto.h  2_script.c  2_sound.c  Makefile
reference/src/_g3/: 3_back.c  3_boss.c  3_boss22.c  3_define.h  3_dialog.c  3_file.c  3_grp.c  3_image.c  3_init.c  3_main.c  3_move.c  3_movpat.c  3_object.c  3_panel.c  3_proto.h  3_script.c  3_sound.c  Makefile
scripts/: build_web.sh  dump_actor_ppm.py  extract_graphics_got.py  serve_web.sh
scripts/toolchain/: README.md  build_openwatcom_v2.sh  build_openwatcom_v2_bootstrap.sh  fetch_jwasm.py  fetch_jwasm.sh  fetch_openwatcom.py
src/digisnd/: digisnd.c  digisnd.h
src/game/: back.c  boss_ep1.c  boss_ep2.c  boss_ep3.c  dialog.c  episode.c  episode.h  file.c  game_define.h  game_proto.h  grp.c  image.c  init.c  main.c  move.c  movpat.c  music.c  object.c  panel.c  script.c  shtmov.c  shtpat.c  sound.c  sptile.c
src/native/: adlib_native.c  adlib_native.h  adlib_stub.c  audio_raylib.c  digisnd_native.c  digisnd_stub.c  dos_compat.c  emscripten_fs.c  emscripten_fs.h  far_compat.c  got_platform.h  graphics_got.c  graphics_got.h  gui.c  gui.h  gui_settings.c  joy_stub.c  launcher.c  launcher.h  launcher_extras.c  launcher_extras.h  main_raylib.c  main_raylib_g2.c  main_raylib_g3.c  main_raylib_unified.c  mixer.c  mixer.h  opl2_emu.c  opl2_emu.cpp  opl2_emu.h  platform_raylib.c  voc_decode.c  voc_decode.h  web_gamepad.c
src/native/include/: alloc.h  bios.h  conio.h  dir.h  dos.h  io.h  malloc.h  mem.h  process.h  share.h
src/owcompat/: alloc.h  dir.h  mem.h  owpre.h
src/utility/: Makefile  fx_man.c  fx_man.h  g_asm.asm  g_define.h  g_lib.c  g_proto.h  l_define.h  l_proto.h  level.h  lzss.c  mapgen.c  modern.c  modern.h  modex.h  mu_man.c  pcx_imp.c  qsprite.c  res_int.c  res_read.c  res_writ.c  spriteed.c  th.c  ximp.c  xp_imp.c  xsprite.c
web/: emscripten_post.js  emscripten_shell.html
